可执行jar 包方法。